# bqa

./: .gitignore  pyproject.toml
dev/: bqa_blog.md
nanochat/: checkpoint_manager.py  common.py  engine.py  gpt.py  model_fla.py
runs/: attn_compare_4xh100.sbatch  bqa_init_logit_ablation.sbatch  bqa_init_mass_ablation.sbatch  bqa_init_mass_packed.sbatch  d12_attn_compare.sh  miniseries.sh  prep_and_train.sh  scaling_laws.sh  scaling_laws_4xh100.sbatch  submit_apr30_extension.sh  submit_attn_compare.sh  submit_scaling.sh  submit_scaling_d12_d32.sh
scripts/: base_train.py  bqa_bench.py  cache_mha_iters.py  chat_sft.py  cpu_smoke_test.py  plot_scaling_curves.py  run_fla_gdn.sh  run_fla_hybrid025.sh  run_fla_mha.sh  setup_node.sh
scripts/plots/: isoflop.py  scaling_laws.py
